<resources>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_close">Close</string>
    <string name="action_add_to_workspace">Add to home screen</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_to_workspace">Move to home screen</string>
    <string name="action_resize">Resize</string>
    <string name="activity_not_available">"App isn't available"</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold the widget to move it around the home screen</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="added_to_home_screen_accessibility_text">%1$s widget added to home screen</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_label">All apps</string>
    <string name="all_apps_loading_message">Loading apps…</string>
    <string name="all_apps_no_search_results">No apps found matching \"%1$s\"</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_search_results">Search results</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow home screen rotation</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_archived_title">%1$s is archived. Tap to download.</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="app_installing_title">%1$s installing, %2$s complete</string>
    <string name="app_launch_tracker_class" />
    <string name="app_name">Launcher</string>
    <string name="app_pair_default_title">%1$s | %2$s</string>
    <string name="app_pair_name_format">App pair: %1$s and %2$s</string>
    <string name="app_pair_needs_unfold">Unfold device to use this app pair</string>
    <string name="app_pair_unlaunchable_at_screen_size">"This app pair isn't supported on this device"</string>
    <string name="app_waiting_download_title">%1$s waiting to install</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add app icons to home screen</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bubble_bar_overflow_description">Overflow</string>
    <string name="cache_db_name">app_icons.db</string>
    <string name="calendar_component_name" />
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clock_component_name" />
    <string name="color_generator_class" />
    <string name="copy">Copy</string>
    <string name="create_folder_with">Create folder with: %1$s</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="delete_package_intent">\#Intent;action=android.intent.action.DELETE;launchFlags=0x10800000;end</string>
    <string name="derived_app_name">@string/lineageos_app_name</string>
    <string name="desktop_show_labels">Show icon labels on desktop</string>
    <string name="developer_options_filter_hint">Filter</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_update_message">"The app for this icon isn't updated. You can update manually to re-enable this shortcut, or remove the icon."</string>
    <string name="dialog_update_title">App update required</string>
    <string name="disabled_app_label">Disabled %1$s</string>
    <string name="dismiss_prediction_label">"Don't suggest app"</string>
    <string name="dotted_app_label">{count, plural, =1 {{app_name} has # notification} other {{app_name} has # notifications} }</string>
    <string name="drawer_show_labels">Show icon labels in drawer</string>
    <string name="edit_home_screen">Edit Home Screen</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fitness_widget_recommendation_category_label">Reach Your Fitness Goals</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_created">Folder created</string>
    <string name="folder_hint_text">Edit Name</string>
    <string name="folder_name_format_exact">Folder: %1$s, %2$d items</string>
    <string name="folder_name_format_overflow">Folder: %1$s, %2$d or more items</string>
    <string name="folder_name_provider_class" />
    <string name="folder_opened">Folder opened, %1$d by %2$d</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="gadget_complete_setup_text">Tap to finish setup</string>
    <string name="gadget_error_text">"Can't load widget"</string>
    <string name="grid_columns_title">Columns per page</string>
    <string name="grid_follow_default">Follow current grid</string>
    <string name="grid_hotseat_title">Bottom bar icon count</string>
    <string name="grid_layout_title">Home screen layout</string>
    <string name="grid_rows_title">Rows per page</string>
    <string name="notification_dots_title">Notification dots</string>
    <string name="ps_container_lock_title">Lock</string>
    <string name="ps_container_lock_unlock_button">Lock/Unlock Private Space</string>
    <string name="ps_container_settings">Private Space Settings</string>
    <string name="ps_container_title">Private</string>
    <string name="ps_container_transition">Private Space Transitioning</string>
    <string name="settings_lock_layout_summary_off">Icons and widgets can be added, removed and moved on the homescreen</string>
    <string name="settings_lock_layout_summary_on">"Icons and widgets can't be added, removed and moved on the homescreen"</string>
    <string name="settings_lock_layout_title">Lock layout</string>
    <string name="trust_apps_manager_name">Hidden &amp; Protected apps</string>
    <string name="icon_size_title">Icon size</string>
</resources>