<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ps_header_layout" android:background="@drawable/bg_ps_header" android:layout_width="fill_parent" android:layout_height="@dimen/ps_header_height" android:clipToOutline="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:id="@id/settingsAndLockGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:animateLayoutChanges="true" android:layout_alignParentEnd="true">
        <ImageButton android:id="@id/ps_settings_button" android:background="@drawable/ps_settings_background" android:layout_width="@dimen/ps_header_image_height" android:layout_height="@dimen/ps_header_image_height" android:src="@drawable/ic_ps_settings" android:contentDescription="@string/ps_container_settings" android:layout_marginEnd="@dimen/ps_header_settings_icon_margin_end" />
        <LinearLayout android:gravity="center_vertical" android:id="@id/ps_lock_unlock_button" android:background="@drawable/ps_lock_background" android:layout_width="wrap_content" android:layout_height="@dimen/ps_header_image_height" android:contentDescription="@string/ps_container_lock_unlock_button" android:layout_marginEnd="@dimen/ps_header_layout_margin">
            <ImageView android:id="@id/lock_icon" android:layout_width="@dimen/ps_lock_icon_size" android:layout_height="@dimen/ps_lock_icon_size" android:layout_marginTop="@dimen/ps_lock_icon_margin_top" android:layout_marginBottom="@dimen/ps_lock_icon_margin_bottom" android:src="@drawable/ic_lock" android:scaleType="center" android:importantForAccessibility="no" app:tint="@color/material_color_primary_fixed_dim" />
            <TextView android:textSize="14.0sp" android:textColor="@color/material_color_on_primary_fixed" android:id="@id/lock_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ps_container_lock_title" android:layout_marginStart="@dimen/ps_lock_icon_text_margin_start_expanded" android:layout_marginEnd="@dimen/ps_lock_icon_text_margin_end_expanded" style="@style/TextHeadline" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/ps_transition_image" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/ps_header_image_height" android:src="@drawable/bg_ps_transition_image" android:layout_centerVertical="true" android:contentDescription="@string/ps_container_transition" android:layout_marginEnd="@dimen/ps_header_layout_margin" android:layout_alignParentEnd="true" />
    <TextView android:theme="@style/PrivateSpaceHeaderTextStyle" android:gravity="center_vertical" android:id="@id/ps_container_header" android:layout_width="wrap_content" android:layout_height="@dimen/ps_header_text_height" android:text="@string/ps_container_title" android:layout_centerVertical="true" android:layout_marginStart="@dimen/ps_header_layout_margin" android:layout_toStartOf="@id/settingsAndLockGroup" android:layout_alignParentStart="true" />
</RelativeLayout>